--- a/src/app/components/private/shared/trainings/training-list/training-list.component.html
+++ b/src/app/components/private/shared/trainings/training-list/training-list.component.html
@@ -57,7 +57,7 @@
                     <td>
                       <button
                         class="btn btn-warning mx-1"
-                        [routerLink]="['/modify-category', training._id]"
+                        [routerLink]="['/modify-training', training._id]"
                       >
                         <i
                           class="fa fa-pencil"
