--- a/src/app/components/public/courses/courses.component.css
+++ b/src/app/components/public/courses/courses.component.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 150px;
     object-fit: cover;
+   
 }
 
 .card-text small {
@@ -17,4 +18,17 @@
 }
 .trainer-card{
     object-fit: cover;
+}
+
+.category-img :hover{
+    transition: .5s;
+}
+
+.description{
+    height: 200px;
+}
+
+.image-training{
+    width: 100%;
+    height: 100%;
 }
