--- a/src/app/components/public/register/register.component.html
+++ b/src/app/components/public/register/register.component.html
@@ -47,7 +47,7 @@
                         <div class="col-12">
                             <div class="form-floating">
                                 <p for="file">Import Your Image : <input type="file" class="form-control-file" id="file"
-                                        formControlName="file"> </p>
+                                        formControlName="file" (change)="save($event)"> </p>
                                 <div *ngIf="file?.invalid && file?.touched">
                                     <small *ngIf="file?.errors?.['required']" class="text-danger">image
                                         required<br></small>
