--- a/src/app/components/public/trainer-item/trainer-item.component.html
+++ b/src/app/components/public/trainer-item/trainer-item.component.html
@@ -1,6 +1,6 @@
 <div class="team-item bg-light">
     <div class="overflow-hidden">
-        <img class="img-fluid" src="http://localhost:3000/{{image}}" alt="">
+        <img class="img-fluid trainer-img" src="http://localhost:3000/{{image}}" alt="">
     </div>
     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -12,8 +12,8 @@
                     class="fab fa-twitter"></i></a>
         </div>
     </div>
-    <div class="text-center p-4">
-        <h5 class="mb-0">{{firstname}}{{lastname}}</h5>
+    <div class="text-center p-4  description">
+        <h5 class="mb-0">{{firstname}} {{lastname}}</h5>
         <small>{{speciality}}</small>
     </div>
 </div>
