--- a/src/app/components/public/about/about.component.html
+++ b/src/app/components/public/about/about.component.html
@@ -121,7 +121,7 @@
             <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
             <h1 class="mb-5">Expert Instructors</h1>
         </div>
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center">
             <div class="col-lg-3 col-md-6 wow fadeInUp"  *ngFor="let trainer of trainersList"  data-wow-delay="0.1s">
 
                 <app-trainer-item [firstname]="trainer.firstname"
