--- a/src/app/components/public/courses/courses.component.html
+++ b/src/app/components/public/courses/courses.component.html
@@ -37,7 +37,6 @@
   </div>
 </div>
 
-
 <!-- Categories Start -->
 <div *ngIf="categoriesList.length > 0" class="container-xxl py-5 category">
   <div class="container">
@@ -51,7 +50,7 @@
     <div class="row g-3 align-items-center justify-content-center d-flex">
       <div
         *ngFor="let category of categoriesList"
-        class="col-lg-4 mr-2 col-md-6 mr-5"
+        class="col-lg-4 mr-2 col-md-6 mr-5 wow fadeInUp"
       >
         <div class="card card-shadow" style="width: 25rem">
           <img
@@ -108,7 +107,7 @@
             style="height: 250px"
           >
             <img
-              class="img-fluid"
+              class="img-fluid image-training"
               src="http://localhost:3000/{{ training.image }}"
               alt=""
             />
@@ -129,7 +128,7 @@
               >
             </div>
           </div>
-          <div class="text-center p-4 pb-0">
+          <div class="text-center p-4 pb-0 description">
             <h3 class="mb-0">$149.00</h3>
             <div class="mb-3">
               <small class="fa fa-star text-primary"></small>
@@ -139,12 +138,12 @@
               <small class="fa fa-star text-primary"></small>
               <small>(123)</small>
             </div>
-            <h5 class="mb-4">{{ training.objectif }}</h5>
+            <h5 class="mb-4">{{ training.name }}</h5>
           </div>
           <div class="d-flex border-top">
             <small class="flex-fill text-center border-end py-2"
               ><i class="fa fa-user-tie text-primary me-2"></i
-              >{{ training.name }}</small
+              >{{ training.category.name }}</small
             >
             <small class="flex-fill text-center border-end py-2"
               ><i class="fa fa-clock text-primary me-2"></i
