--- a/src/app/components/public/our-team/our-team.component.html
+++ b/src/app/components/public/our-team/our-team.component.html
@@ -24,17 +24,18 @@
 
 <!-- Team Start -->
 <div class="container-xxl py-5">
-    <div class="container" *ngIf="trainersList.length == 0">
-        <div class="alert alert-info" role="alert">
-            Trainers not ready yet !
-        </div>
-    </div>
+    <div *ngIf ="trainersList.length == 0" tclass="text-center wow fadeInUp" data-wow-delay="0.1s">
+        <h6 class="section-title bg-white text-center text-primary px-3">
+          Categories
+        </h6>
+        <h1 class="mb-5">there is no trainers right now</h1>
+      </div>
     <div class="container" *ngIf="trainersList.length > 0">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
             <h1 class="mb-5">Expert Instructors</h1>
         </div>
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center">
             <div *ngFor="let trainer of trainersList" class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 
                 <app-trainer-item [firstname]="trainer.firstname" [lastname]="trainer.lastname"
