update and fix the interface

--- a/src/app/components/private/shared/trainings/add-training/add-training.component.html
+++ b/src/app/components/private/shared/trainings/add-training/add-training.component.html
@@ -162,7 +162,7 @@
               </div>
               </div>
              
-              <button class="btn btn-primary mt-2" type="submit">add</button>
+              <button class="btn btn-primary mt-2" [disabled]="myForm.invalid" type="submit">add</button>
             </div>
           </form>
         </div>
