--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -179,7 +179,7 @@
 <!-- Categories Start -->
 
 <!-- Courses Start -->
-<div *ngIf="categoriesList.length == 0" class="container-xxl py-5">
+<div *ngIf="trainingsList.length > 0" class="container-xxl py-5">
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
