--- a/src/app/components/public/our-team/our-team.component.html
+++ b/src/app/components/public/our-team/our-team.component.html
@@ -4,49 +4,65 @@
 
 <!-- Header Start -->
 <div class="container-fluid bg-primary py-5 mb-5 page-header">
-    <div class="container py-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-10 text-center">
-                <h1 class="display-3 text-white animated slideInDown">Our Team</h1>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Team</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-10 text-center">
+        <h1 class="display-3 text-white animated slideInDown">Our Team</h1>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb justify-content-center">
+            <li class="breadcrumb-item">
+              <a class="text-white" href="#">Home</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a class="text-white" href="#">Pages</a>
+            </li>
+            <li class="breadcrumb-item text-white active" aria-current="page">
+              Team
+            </li>
+          </ol>
+        </nav>
+      </div>
     </div>
+  </div>
 </div>
 <!-- Header End -->
 
-
 <!-- Team Start -->
 <div class="container-xxl py-5">
-    <div *ngIf ="trainersList.length == 0" tclass="text-center wow fadeInUp" data-wow-delay="0.1s">
-        <h6 class="section-title bg-white text-center text-primary px-3">
-          Categories
-        </h6>
-        <h1 class="mb-5">there is no trainers right now</h1>
-      </div>
-    <div class="container" *ngIf="trainersList.length > 0">
+    <div class="container" *ngIf="trainersList.length == 0">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
-            <h1 class="mb-5">Expert Instructors</h1>
+          <h6 class="section-title bg-white text-center text-primary px-3">
+            trainers
+          </h6>
+          <h1 class="mb-5">there is no trainers for now</h1>
         </div>
-        <div class="row g-4 justify-content-center">
-            <div *ngFor="let trainer of trainersList" class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-
-                <app-trainer-item [firstname]="trainer.firstname" [lastname]="trainer.lastname"
-                    [speciality]="trainer.speciality" [image]="trainer.image" [facebook]="trainer.facebook"
-                    [instagram]="trainer.instagram" [twitter]="trainer.twitter">
-
-                </app-trainer-item>
-
-            </div>
         </div>
+  <div class="container" *ngIf="trainersList.length > 0">
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+      <h6 class="section-title bg-white text-center text-primary px-3">
+        Instructors
+      </h6>
+      <h1 class="mb-5">Expert Instructors</h1>
     </div>
+    <div class="row g-4 justify-content-center">
+      <div
+        *ngFor="let trainer of trainersList"
+        class="col-lg-3 col-md-6 wow fadeInUp"
+        data-wow-delay="0.1s"
+      >
+        <app-trainer-item
+          [firstname]="trainer.firstname"
+          [lastname]="trainer.lastname"
+          [speciality]="trainer.speciality"
+          [image]="trainer.image"
+          [facebook]="trainer.facebook"
+          [instagram]="trainer.instagram"
+          [twitter]="trainer.twitter"
+        >
+        </app-trainer-item>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Team End -->
 
