feature:create article  list components

--- a/src/app/components/private/shared/blog/blog-list/blog-list.component.html
+++ b/src/app/components/private/shared/blog/blog-list/blog-list.component.html
@@ -55,6 +55,9 @@
                         alt=""
                       />
                     </td>
+                    <td>{{ article.content.substring(0,70) }}...</td>
+                    <td>{{ article.user.firstname }} {{ article.user.firstname }}</td>
+                    <td>{{ moment(article.createdAt) }}</td>
                     <td>
                       <button
                         class="btn btn-warning mx-2"
