feature:add article components

--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -24,6 +24,10 @@
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-book"></i></div>
                     Trainings management
                 </a>
+                <a class="nav-link" routerLink="/article-list">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-newspaper"></i></div>
+                    articles management
+                </a>
                 <a class="nav-link" routerLink="/message-list">
                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     messages management
