--- a/src/app/components/private/shared/blog/add-article/add-article.component.html
+++ b/src/app/components/private/shared/blog/add-article/add-article.component.html
@@ -1,1 +1,102 @@
-<p>add-article works!</p>
+<div class="sb-nav-fixed">
+  <app-top-bar></app-top-bar>
+
+  <div id="layoutSidenav">
+    <app-side-bar></app-side-bar>
+
+    <div id="layoutSidenav_content">
+      <main>
+        <div class="container-fluid px-4 mx-3">
+          <h1 class="mt-4">article managment</h1>
+          <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item active">add new article</li>
+          </ol>
+
+          <form [formGroup]="myForm" (ngSubmit)="add()">
+            <div>
+              <img
+                [src]="imageUrl"
+                class="image-fluid article-image"
+                alt=""
+                style="width: 150px"
+              />
+
+              <div class="form-group">
+                <input
+                  type="file"
+                  class="form-control upload-input"
+                  (change)="save($event)"
+                  id="customFile"
+                />
+              </div>
+            </div>
+            <div class="input-sec">
+              <select
+                class="form-select mt-3"
+                formControlName="createdBy"
+                id="createdBy"
+                aria-label="Default select example"
+              >
+                <option selected>Open this select menu</option>
+                <option
+                  *ngFor="let user of userList; let i = index"
+                  [value]="user._id"
+                >
+                  {{ user.firstname }} {{ user.lastname }}
+                </option>
+              </select>
+              <div class="form-group">
+                <div>
+                  <label for="articleName " class="mt-3">article titre :</label>
+                </div>
+                <input
+                  type="text"
+                  class="form-control article-input"
+                  formControlName="titre"
+                  id="articleName"
+                />
+                <div *ngIf="titre?.invalid && titre?.touched">
+                  <small *ngIf="titre?.errors?.['required']" class="text-danger"
+                    ><b>titre is required</b><br
+                  /></small>
+                  <small
+                    *ngIf="titre?.errors?.['minlength']"
+                    class="text-danger"
+                    ><b> invalid titre</b><br
+                  /></small>
+                </div>
+              </div>
+              <div class="form-group">
+                <div>
+                  <label for="content " class="mt-3">article content :</label>
+                </div>
+                <textarea
+                  type="text"
+                  class="form-control article-input"
+                  formControlName="content"
+                  id="content"
+                  rows="10"
+                ></textarea>
+                <div *ngIf="content?.invalid && content?.touched">
+                  <small
+                    *ngIf="content?.errors?.['required']"
+                    class="text-danger"
+                    ><b>content is required</b><br
+                  /></small>
+                  <small
+                    *ngIf="content?.errors?.['minlength']"
+                    class="text-danger"
+                    ><b> invalid content</b><br
+                  /></small>
+                </div>
+              </div>
+            </div>
+
+            <button class="btn btn-primary mt-2" type="submit">add</button>
+          </form>
+        </div>
+      </main>
+    </div>
+  </div>
+  <app-footer-dashboard></app-footer-dashboard>
+</div>
