feature:update article component

--- a/src/app/components/public/navbar/navbar.component.html
+++ b/src/app/components/public/navbar/navbar.component.html
@@ -10,6 +10,7 @@
             <a routerLink="/" routerLinkActive="active" class="nav-item nav-link">Home</a>
             <a routerLink="/about" routerLinkActive="active" class="nav-item nav-link">About</a>
             <a routerLink="/courses" routerLinkActive="active" class="nav-item nav-link">Courses</a>
+            <a routerLink="/blog" routerLinkActive="active" class="nav-item nav-link">Blog</a>
             <a routerLink="/our-team" routerLinkActive="active" class="nav-item nav-link">Our Team</a>
             <a routerLink="/contact" routerLinkActive="active" class="nav-item nav-link">Contact</a>
         </div>
