--- a/src/app/components/public/blog/blog.component.html
+++ b/src/app/components/public/blog/blog.component.html
@@ -49,7 +49,7 @@
                   
                       
                       <div>
-                        <a href="#" class="btn btn-primary">Explore</a>
+                        <a routerLink="/blog/{{article._id}}" class="btn btn-primary">Explore</a>
                       </div>
                       
                     </div>
