patch:tanslate home page

--- a/src/app/components/public/navbar/navbar.component.html
+++ b/src/app/components/public/navbar/navbar.component.html
@@ -7,15 +7,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a routerLink="/" routerLinkActive="active" class="nav-item nav-link">Home</a>
-            <a routerLink="/about" routerLinkActive="active" class="nav-item nav-link">About</a>
-            <a routerLink="/courses" routerLinkActive="active" class="nav-item nav-link">Courses</a>
+            <a routerLink="/" routerLinkActive="active" class="nav-item nav-link">Accueil</a>
+            <a routerLink="/about" routerLinkActive="active" class="nav-item nav-link">A propos</a>
+            <a routerLink="/courses" routerLinkActive="active" class="nav-item nav-link">Cours</a>
             <a routerLink="/blog" routerLinkActive="active" class="nav-item nav-link">Blog</a>
-            <a routerLink="/our-team" routerLinkActive="active" class="nav-item nav-link">Our Team</a>
+            <a routerLink="/our-team" routerLinkActive="active" class="nav-item nav-link">Notre équipe</a>
             <a routerLink="/contact" routerLinkActive="active" class="nav-item nav-link">Contact</a>
         </div>
         <a routerLink="/register" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
-            Join Now
+            Rejoignez-nous
             <i class="fa fa-arrow-right ms-3"></i>
         </a>
     </div>
