--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -15,10 +15,10 @@
           <div class="row justify-content-start">
             <div class="col-sm-10 col-lg-8">
               <h5 class="text-primary text-uppercase mb-3 animated slideInDown">
-                Best Online Courses
+                Meilleurs cours en ligne
               </h5>
               <h1 class="display-3 text-white animated slideInDown">
-                The Best Online Learning Platform
+                La meilleure plateforme d'apprentissage en ligne
               </h1>
               <p class="fs-5 text-white mb-4 pb-2">
                 Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam
@@ -28,12 +28,12 @@
               <a
                 href=""
                 class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
-                >Read More</a
+                >Lire la suite</a
               >
               <a
                 href=""
                 class="btn btn-light py-md-3 px-md-5 animated slideInRight"
-                >Join Now</a
+                >rejoindre maintenant</a
               >
             </div>
           </div>
@@ -52,7 +52,8 @@
         <div class="service-item text-center pt-3">
           <div class="p-4">
             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-            <h5 class="mb-3">Skilled Instructors</h5>
+            <h5 class="mb-3">Des Instructeurs Qualifiés
+            </h5>
             <p>
               Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
               diam
