fix:always arrow when hover on cards

--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -14,7 +14,7 @@
         <div class="container">
           <div class="row justify-content-start">
             <div class="col-sm-10 col-lg-8">
-              <h5 class="text-primary text-uppercase mb-3 animated slideInDown">
+              <h5 class="text-light text-uppercase mb-3 animated slideInDown">
                 Meilleurs cours en ligne
               </h5>
               <h1 class="display-3 text-white animated slideInDown">
@@ -65,7 +65,7 @@
         <div class="service-item text-center pt-3">
           <div class="p-4">
             <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-            <h5 class="mb-3">Online Classes</h5>
+            <h5 class="mb-3">Les Classes En Ligne            </h5>
             <p>
               Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
               diam
@@ -77,7 +77,7 @@
         <div class="service-item text-center pt-3">
           <div class="p-4">
             <i class="fa fa-3x fa-home text-primary mb-4"></i>
-            <h5 class="mb-3">Home Projects</h5>
+            <h5 class="mb-3">Projet A La Maison</h5>
             <p>
               Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
               diam
@@ -89,7 +89,7 @@
         <div class="service-item text-center pt-3">
           <div class="p-4">
             <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-            <h5 class="mb-3">Book Library</h5>
+            <h5 class="mb-3">Bibliothèque De Livres</h5>
             <p>
               Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
               diam
@@ -122,9 +122,9 @@
       </div>
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
         <h6 class="section-title bg-white text-start text-primary pe-3">
-          About Us
+          A propos de nous
         </h6>
-        <h1 class="mb-4">Welcome to eLEARNING</h1>
+        <h1 class="mb-4">Bienvenue dans l'elearning</h1>
         <p class="mb-4">
           Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
           diam amet diam et eos. Clita erat ipsum et lorem et sit.
@@ -137,40 +137,37 @@
         <div class="row gy-2 gx-4 mb-4">
           <div class="col-sm-6">
             <p class="mb-0">
-              <i class="fa fa-arrow-right text-primary me-2"></i>Skilled
-              Instructors
+              <i class="fa fa-arrow-right text-primary me-2"></i>Des Instructeurs Qualifiés
             </p>
           </div>
           <div class="col-sm-6">
             <p class="mb-0">
-              <i class="fa fa-arrow-right text-primary me-2"></i>Online Classes
-            </p>
-          </div>
-          <div class="col-sm-6">
-            <p class="mb-0">
-              <i class="fa fa-arrow-right text-primary me-2"></i>International
-              Certificate
-            </p>
-          </div>
-          <div class="col-sm-6">
-            <p class="mb-0">
-              <i class="fa fa-arrow-right text-primary me-2"></i>Skilled
-              Instructors
-            </p>
-          </div>
-          <div class="col-sm-6">
-            <p class="mb-0">
-              <i class="fa fa-arrow-right text-primary me-2"></i>Online Classes
+              <i class="fa fa-arrow-right text-primary me-2"></i>Les Classes En Ligne 
             </p>
           </div>
           <div class="col-sm-6">
             <p class="mb-0">
               <i class="fa fa-arrow-right text-primary me-2"></i>International
               Certificate
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>Bibliothèque De Livres
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>Les Classes En Ligne
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>certificat international
             </p>
           </div>
         </div>
-        <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+        <a class="btn btn-primary py-3 px-5 mt-2" href="">Lire la suite</a>
       </div>
     </div>
   </div>
@@ -184,9 +181,9 @@
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        Courses
+        Cours
       </h6>
-      <h1 class="mb-5">Popular Courses</h1>
+      <h1 class="mb-5">Cours populaires</h1>
     </div>
     <div class="row g-4 justify-content-center">
         <div
@@ -211,13 +208,13 @@
                 href="#"
                 class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                 style="border-radius: 30px 0 0 30px"
-                >Read More</a
+                >Lire La Suite</a
               >
               <a
                 href="#"
                 class="flex-shrink-0 btn btn-sm btn-primary px-3"
                 style="border-radius: 0 30px 30px 0"
-                >Join Now</a
+                >Rejoindre maintenant</a
               >
             </div>
           </div>
@@ -243,13 +240,13 @@
               >{{ training.hours }}</small
             >
             <small class="flex-fill text-center py-2"
-              ><i class="fa fa-user text-primary me-2"></i>30 Students</small
+              ><i class="fa fa-user text-primary me-2"></i>30 participants</small
             >
           </div>
         </div>
       </div>
       <div class="col-lg-12">
-        <a routerLink="/courses" class="btn btn-primary button py-3 mt-2" href="">Explore More</a>
+        <a routerLink="/courses" class="btn btn-primary button py-3 mt-2" href="">Voir plus</a>
       </div>
 
     </div>
@@ -263,9 +260,9 @@
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        Instructors
+        Instructeurs
       </h6>
-      <h1 class="mb-5">Expert Instructors</h1>
+      <h1 class="mb-5">Nos instructeurs experts</h1>
     </div>
     <div class="row g-4 justify-content-center">
       <div
@@ -295,9 +292,9 @@
   <div class="container">
     <div class="text-center">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        Testimonial
+        Témoignage
       </h6>
-      <h1 class="mb-5">Our Students Say!</h1>
+      <h1 class="mb-5">Impressions de nos étudiants</h1>
     </div>
 
     <div class="row position-relative">
@@ -307,7 +304,7 @@
           src="assets/img/testimonial-1.jpg"
           style="width: 80px; height: 80px"
         />
-        <h5 class="mb-0">Client Name</h5>
+        <h5 class="mb-0">Nom de Client</h5>
         <p>Profession</p>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
@@ -323,7 +320,7 @@
           src="assets/img/testimonial-2.jpg"
           style="width: 80px; height: 80px"
         />
-        <h5 class="mb-0">Client Name</h5>
+        <h5 class="mb-0">Nom de Client</h5>
         <p>Profession</p>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
@@ -339,7 +336,7 @@
           src="assets/img/testimonial-3.jpg"
           style="width: 80px; height: 80px"
         />
-        <h5 class="mb-0">Client Name</h5>
+        <h5 class="mb-0">Nom de Client</h5>
         <p>Profession</p>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
@@ -355,7 +352,7 @@
           src="assets/img/testimonial-4.jpg"
           style="width: 80px; height: 80px"
         />
-        <h5 class="mb-0">Client Name</h5>
+        <h5 class="mb-0">Nom de Client</h5>
         <p>Profession</p>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
