--- a/src/app/components/public/footer/footer.component.html
+++ b/src/app/components/public/footer/footer.component.html
@@ -1,13 +1,35 @@
 <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="row g-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <div class="row g-2 ">
+                        <img src="assets/img/5.png" alt="" class="footer-img">
+                        <p class="mt-3 text-align-start">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    </div>
+                </div>
             <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-3">Quick Link</h4>
-                <a class="btn btn-link" [routerLink]="['/about']">About Us</a>
-                <a class="btn btn-link" [routerLink]="['/contact']">Contact Us</a>
-                <a class="btn btn-link">Privacy Policy</a>
-                <a class="btn btn-link">Terms & Condition</a>
-                <a class="btn btn-link">FAQs & Help</a>
+                <h4 class="text-white mb-3">Lien rapide</h4>
+                <a class="btn btn-link" [routerLink]="['/about']">A propos</a>
+                <a class="btn btn-link" [routerLink]="['/contact']">contactez-nous</a>
+                <a class="btn btn-link">Politique de confidentialité</a>
+                <a class="btn btn-link">Termes et conditions</a>
+                <a class="btn btn-link">FAQ et aide</a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="text-white mb-3">actualités</h4>
+                <div class="d-flex flex-column">
+                    <div *ngFor="let recentArticle of articleList" class="actualities">
+                      <img routerLink="blog/{{recentArticle._id}}" src="http://localhost:3000/{{ recentArticle.image }}" alt="" />
+                      <h4>
+                        <a routerLink="blog/{{recentArticle._id}}"
+                       >{{recentArticle.titre}}</a
+                        >
+                      </h4>
+                      <time datetime="2020-01-01">{{ recentArticle.createdAt.substring(0,10)}}</time>
+                    </div>
+                    <button routerLink="blog" class="view-more">voir plus</button>
+                  </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-white mb-3">Contact</h4>
@@ -21,37 +43,7 @@
                     <a class="btn btn-outline-light btn-social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-3">Gallery</h4>
-                <div class="row g-2 pt-2">
-                    <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="assets/img/course-1.jpg" alt="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="assets/img/course-2.jpg" alt="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="assets/img/course-3.jpg" alt="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="assets/img/course-2.jpg" alt="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="assets/img/course-3.jpg" alt="">
-                    </div>
-                    <div class="col-4">
-                        <img class="img-fluid bg-light p-1" src="assets/img/course-1.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h4 class="text-white mb-3">Newsletter</h4>
-                <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                <div class="position-relative mx-auto" style="max-width: 400px;">
-                    <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                </div>
-            </div>
+           
         </div>
     </div>
     <div class="container">
