--- a/src/assets/css-elearn/style.css
+++ b/src/assets/css-elearn/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #06BBCC;
+    --primary: #2C4690;
     --light: #F0FBFC;
     --dark: #181d38;
 }
@@ -256,6 +256,7 @@
 .service-item {
     background: var(--light);
     transition: .5s;
+    cursor: default;
 }
 
 .service-item:hover {
