--- a/src/app/components/private/shared/side-bar/side-bar.component.html
+++ b/src/app/components/private/shared/side-bar/side-bar.component.html
@@ -1,42 +1,53 @@
 <!-- SIDEBAR -->
 <div id="layoutSidenav_nav">
-    <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-        <div class="sb-sidenav-menu">
-            <div class="nav">
-                <div class="sb-sidenav-menu-heading">Core</div>
-                <a class="nav-link" routerLink="/dashboard">
-                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                    Dashboard
-                </a>
-                <a class="nav-link" routerLink="/users-list">
-                    <div class="sb-nav-link-icon"><i class="fa-solid fa-user-gear"></i></div>
-                    Users management
-                </a>
-                <a class="nav-link" routerLink="/category">
-                    <div class="sb-nav-link-icon"><i class="fa-solid fa-box-archive"></i></div>
-                    categories management
-                </a>
-                <a class="nav-link" routerLink="/trainer-list">
-                    <div class="sb-nav-link-icon"><i class="fa-solid fa-person-chalkboard"></i></div>
-                    Trainers management
-                </a>
-                <a class="nav-link" routerLink="/training-list">
-                    <div class="sb-nav-link-icon"><i class="fa-solid fa-book"></i></div>
-                    Trainings management
-                </a>
-                <a class="nav-link" routerLink="/article-list">
-                    <div class="sb-nav-link-icon"><i class="fa-solid fa-newspaper"></i></div>
-                    articles management
-                </a>
-                <a class="nav-link" routerLink="/message-list">
-                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                    messages management
-                </a>
-            </div>
-        </div>
-        <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
-        </div>
-    </nav>
+  <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+    <div class="sb-sidenav-menu">
+      <div class="nav">
+        <div class="sb-sidenav-menu-heading">menu</div>
+        <a class="nav-link" routerLink="/dashboard">
+          <div class="sb-nav-link-icon">
+            <i class="fas fa-tachometer-alt"></i>
+          </div>
+          Tableau de bord
+        </a>
+        <a class="nav-link" routerLink="/users-list">
+          <div class="sb-nav-link-icon">
+            <i class="fa-solid fa-user-gear"></i>
+          </div>
+          Utilisateurs
+        </a>
+        <a class="nav-link" routerLink="/category">
+          <div class="sb-nav-link-icon">
+            <i class="fa-solid fa-box-archive"></i>
+          </div>
+          Catégories
+        </a>
+        <a class="nav-link" routerLink="/trainer-list">
+          <div class="sb-nav-link-icon">
+            <i class="fa-solid fa-person-chalkboard"></i>
+          </div>
+          Formateurs
+        </a>
+        <a class="nav-link" routerLink="/training-list">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-book"></i></div>
+          Formation
+        </a>
+        <a class="nav-link" routerLink="/article-list">
+          <div class="sb-nav-link-icon">
+            <i class="fa-solid fa-newspaper"></i>
+          </div>
+          Articles
+        </a>
+        <a class="nav-link" routerLink="/message-list">
+          <div class="sb-nav-link-icon">
+            <i class="fas fa-tachometer-alt"></i>
+          </div>
+          Messages
+        </a>
+      </div>
+    </div>
+    <div class="sb-sidenav-footer">
+      <div class="small">connecté en tant que:</div>
+    </div>
+  </nav>
 </div>
