--- a/src/app/components/private/shared/users/users-list/users-list.component.html
+++ b/src/app/components/private/shared/users/users-list/users-list.component.html
@@ -9,7 +9,7 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h2 style="color: black">Users Managment</h2>
+                    <h2 style="color: black">utilisateurs</h2>
                     <div>
                         <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-sm">
